# space-shooter

./: CMakeLists.txt  README.md  install_deps.sh
src/: Bullet.cpp  Bullet.h  Collidable.h  EnemyTypes.h  GameLoop.cpp  GameLoop.h  PlayArea.cpp  PlayArea.h  Player.cpp  Player.h  Rect.h  Shooter.h  Vector2.h  main.cpp
src/Bullet/: Bullet.cpp  Bullet.h  SpecialBullet.cpp  SpecialBullet.h
src/Entities/: Entity.cpp  Entity.h  NormalEnemy.cpp  NormalEnemy.h
src/Entity/: Entity.cpp  Entity.h
src/Graphics/: BoostBar.cpp  BoostBar.h  HealthBar.cpp  HealthBar.h  Menu.cpp  Menu.h  UI.cpp  UI.h
src/Graphics/Elements/: BoostBar.cpp  BoostBar.h  HealthBar.cpp  HealthBar.h
src/PlayArea/: PlayArea.cpp  PlayArea.h
src/Player/: Player.cpp  Player.h
src/Scripts/: AsteroidScript.cpp  AsteroidScript.h  FollowPlayerScript.cpp  FollowPlayerScript.h  Script.cpp  Script.h
src/Utils/: Circle.cpp  Circle.h  Hitbox.h  Rect.cpp  Rect.h  ShipType.h  Vector2.h
